--- a/.github/workflows/node_deploy_main.yml
+++ b/.github/workflows/node_deploy_main.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Add remote origin
         run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
       - name: Deploy to Heroku
-        run: git push --force heroku `git subtree split --prefix frontend HEAD`:dev
+        run: git push --force heroku `git subtree split --prefix frontend HEAD`:master
 
