--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,11 @@
     "plotly.js": "^2.12.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-plotly.js": "^2.5.1"
+    "react-icons": "^4.4.0",
+    "react-plotly.js": "^2.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18"
   },
   "devDependencies": {
     "@types/node": "^17.0.40",
