--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
 cryptography==37.0.2
+Deprecated==1.2.13
 dulwich==0.20.42
 feedparser==6.0.10
 Flask==2.1.2
@@ -18,7 +19,9 @@ MarkupSafe==2.1.1
 perceval==0.17.17
 pycodestyle==2.8.0
 pycparser==2.21
+PyGithub==1.55
 PyJWT==2.4.0
+PyNaCl==1.5.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 requests==2.27.1
@@ -29,3 +32,4 @@ toml==0.10.2
 urllib3==1.26.9
 waitress==2.1.2
 Werkzeug==2.1.2
+wrapt==1.14.1
