--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "axios": "^0.27.2",
     "next": "12.1.6",
-    "plotly.js": "^2.12.1",
+    "plotly.js": "^2.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-plotly.js": "^2.5.1",
+    "reactjs-popup": "^2.0.5",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18"
